--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 ✔ Teknik beri arahan pada chatGPT untuk hasilkan konten Threads yang boleh buat duit
             </li>
             <li>
-                ✔ Belajar bagaimanakan Threads ini boleh jadi lubuk duit online
+                ✔ Belajar bagaimana Threads ini boleh jadi lubuk duit online
             </li>
             <li>
                 ✔ Teknikal setup untuk setting Shopee Affiliate
