--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <section id="purchase">
         <h2>Dapatkan Sekarang!</h2>
         <h3><span class="original-price">RM 89</span> <br> <span class="promo-price">RM 59</span></h3>
-        <h3 style="color: red;">Promosi terhad, harga akan dinaikkan pada bila-bila masa!</h2>
+        <h3 style="color: red;">Promosi akan tamat selepas 30 orang terakhir yang beli!</h2>
             <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="btn">Dapatkan Sekarang</a>
     </section>
 
