--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             src="https://www.loom.com/embed/a506749662064936ab11abe8913b6272?sid=bc2f0369-49b4-4db0-85cf-fffb752e96ed"
             allowfullscreen></iframe>
         <br>
-        <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="cta">Dapatkan Sekarang</a>
     </header>
 
 
@@ -230,7 +230,7 @@
             
         <br>
         <br>
-        <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="cta">Dapatkan Sekarang</a>
     </section>
 
     <section id="features">
@@ -252,7 +252,7 @@
         <h2>Dapatkan Sekarang!</h2>
         <h3><span class="original-price">RM 89</span> <br> <span class="promo-price">RM 59</span></h3>
         <h3 style="color: red;">Promosi akan tamat selepas 30 orang terakhir yang beli!</h2>
-            <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="btn">Dapatkan Sekarang</a>
+            <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="btn">Dapatkan Sekarang</a>
     </section>
 
     <footer>
