--- a/index.html
+++ b/index.html
@@ -305,20 +305,20 @@
             <div class="slides">
 
                 <div class="slide">
-                    <img src="/img/ss1.jpg" alt="Aisyah Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss1.jpg" alt="Aisyah Testimoni">
                     <p>Best student ai Hustler! RM 3K sebulan</p>
                 </div>
                 <div class="slide">
-                    <img src="/img/ss6.jpg" alt="Saiful Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss6.jpg" alt="Saiful Testimoni">
                     <p>Betul bro ni cakap, 30% ilmu 70% usaha yang gila b*bi mesti jadi punya!
                     </p>
                 </div>
                 <div class="slide">
-                    <img src="/img/ss2.jpg" alt="Aiman Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss2.jpg" alt="Aiman Testimoni">
                     <p>Student dah masuk income 1 minggu lepas buat</p>
                 </div>
                 <div class="slide">
-                    <img src="/img/ss3.jpg" alt="Saiful Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss3.jpg" alt="Saiful Testimoni">
                     <p>RM 179 dah balik modal lepas belajar ai Hustler!</p>
                 </div>
                 <div class="slide">
@@ -326,7 +326,7 @@
                     <p>Student paling pantas generate income!</p>
                 </div>
                 <div class="slide">
-                    <img src="/img/ss5.jpg" alt="Saiful Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss5.jpg" alt="Saiful Testimoni">
                     <p>Betul! Kena push kaw kaw macam bro ni.Affiliate memang susah, tapi lagi susah kalau takde ilmu!
                     </p>
                 </div>
