--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <p>RM 179 dah balik modal lepas belajar ai Hustler!</p>
                 </div>
                 <div class="slide">
-                    <img src="/img/ss4.jpg" alt="Saiful Testimoni">
+                    <img src="https://zakrulnizam96.github.io/ai-hustler/img/ss4.jpg" alt="Saiful Testimoni">
                     <p>Student paling pantas generate income!</p>
                 </div>
                 <div class="slide">
