--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <section id="purchase">
         <h2>Dapatkan Sekarang!</h2>
         <h3><span class="original-price">RM 89</span> <br> <span class="promo-price">RM 59</span></h3>
-        <h3 style="color: red;">Promosi akan tamat selepas 30 orang terakhir yang beli!</h2>
+        <h3 style="color: red;">Promosi tinggal lagi 5 slot! Dapatkan segera sebelum harga naik!</h2>
             <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="btn">Dapatkan Sekarang</a>
     </section>
 
