--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             src="https://www.loom.com/embed/a506749662064936ab11abe8913b6272?sid=bc2f0369-49b4-4db0-85cf-fffb752e96ed"
             allowfullscreen></iframe>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="cta">Dapatkan Sekarang</a>
     </header>
 
 
@@ -280,7 +280,7 @@
             
         <br>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="cta">Dapatkan Sekarang</a>
     </section>
 
     <section id="features">
@@ -338,9 +338,9 @@
 
     <section id="purchase">
         <h2>Dapatkan Sekarang!</h2>
-        <h3><span class="original-price">RM 89</span> <br> <span class="promo-price">RM 59</span></h3>
-        <h3 style="color: red;">Promosi tinggal lagi 5 slot! Dapatkan segera sebelum harga naik!</h2>
-            <a href="https://toyyibpay.com/Ai-Hustler-Ads" class="btn">Dapatkan Sekarang</a>
+        <h3><span class="original-price">RM 89</span> <br> <span class="promo-price">RM 69</span></h3>
+        <h3 style="color: red;">Promosi kali ini terhad kepada 30 slot sahaja! Harga akan naik lagi pada bila-bila masa!</h2>
+            <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="btn">Dapatkan Sekarang</a>
     </section>
 
     <footer>
