--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
 <body>
     <header>
         <h1>Jom buat duit dengan <span style="color: #f39c12;"> ChatGPT hari ini!</span></h1>
+        <h2>(Tapi lambat kaya, kena usaha. Affiliate memang susah, tapi lagi susah kalau kau takde ilmu!)</h2>
         <p>Stop guna chatGPT generate gambar Ghibli yang tak bermanfaat, mari aku tunjuk cara buat duit guna chatGPT</p>
         <iframe height="100%" width="100%"
             src="https://www.loom.com/embed/a506749662064936ab11abe8913b6272?sid=bc2f0369-49b4-4db0-85cf-fffb752e96ed"
