--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
         
         <h3><span class="original-price">RM 89</span> 
             <br>
-            <small style="color: red;">Promo RM 59 DAH TAMAT, tapi takpe saya buka promo baru!</small>
+            <!--<small style="color: red;">Promo RM 59 DAH TAMAT, tapi takpe saya buka promo baru!</small>-->
             <br> 
             <span class="promo-price">RM 69</span></h3>
         
-        <h3 style="color: red;">Promosi kali ini terhad kepada 30 slot sahaja!</h2>
+        <h3 style="color: red;">Promosi kali ini terhad kepada 10 slot sahaja!</h2>
             <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="btn">Dapatkan Sekarang</a>
     </section>
 
@@ -429,3 +429,4 @@
 </body>
 
 </html>
+
