--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             src="https://www.loom.com/embed/a506749662064936ab11abe8913b6272?sid=bc2f0369-49b4-4db0-85cf-fffb752e96ed"
             allowfullscreen></iframe>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler" class="cta">Dapatkan Sekarang</a>
     </header>
 
 
@@ -281,7 +281,7 @@
             
         <br>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/Ai-Hustler" class="cta">Dapatkan Sekarang</a>
     </section>
 
     <section id="features">
@@ -360,10 +360,10 @@
             <br>
             <!--<small style="color: red;">Promo RM 59 DAH TAMAT, tapi takpe saya buka promo baru!</small>-->
             <br> 
-            <span class="promo-price">RM 69</span></h3>
+            <span class="promo-price">RM 49</span></h3>
         
-        <h3 style="color: red;">Promosi kali ini terhad kepada 10 slot sahaja!</h2>
-            <a href="https://toyyibpay.com/Ai-Hustler-Ads-2" class="btn">Dapatkan Sekarang</a>
+        <h3 style="color: red;">Promosi kali ini terhad kepada 100 slot sahaja!</h2>
+            <a href="https://toyyibpay.com/Ai-Hustler" class="btn">Dapatkan Sekarang</a>
     </section>
 
     <footer>
@@ -429,4 +429,5 @@
 </body>
 
 </html>
+
 
