--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
         
         <h3><span class="original-price">RM 89</span> 
             <br>
+            <span class="original-price">RM 69</span>
             <!--<small style="color: red;">Promo RM 59 DAH TAMAT, tapi takpe saya buka promo baru!</small>-->
             <br> 
             <span class="promo-price">RM 49</span></h3>
@@ -429,5 +430,6 @@
 </body>
 
 </html>
+
 
 
