--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
             <br> 
             <span class="promo-price">RM 49</span></h3>
         
-        <h3 style="color: red;">Promosi kali ini terhad kepada 100 slot sahaja!</h2>
+        <!--<h3 style="color: red;">Promosi kali ini terhad kepada 100 slot sahaja!</h2>-->
+        <h3 style="color: red;">Promosi kali ini akan tamat pada 31 Ogos 2025, 11:59pm</h2>
             <a href="https://toyyibpay.com/Ai-Hustler" class="btn">Dapatkan Sekarang</a>
     </section>
 
@@ -430,6 +431,7 @@
 </body>
 
 </html>
+
 
 
 
