--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             src="https://www.loom.com/embed/a506749662064936ab11abe8913b6272?sid=bc2f0369-49b4-4db0-85cf-fffb752e96ed"
             allowfullscreen></iframe>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler" class="cta">Dapatkan Sekarang</a>
+        <a href=https://toyyibpay.com/ai-hustler-chatgpt" class="cta">Dapatkan Sekarang</a>
     </header>
 
 
@@ -281,7 +281,7 @@
             
         <br>
         <br>
-        <a href="https://toyyibpay.com/Ai-Hustler" class="cta">Dapatkan Sekarang</a>
+        <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="cta">Dapatkan Sekarang</a>
     </section>
 
     <section id="features">
@@ -359,13 +359,13 @@
         <h3><span class="original-price">RM 89</span> 
             <br>
             <span class="original-price">RM 69</span>
-            <!--<small style="color: red;">Promo RM 59 DAH TAMAT, tapi takpe saya buka promo baru!</small>-->
+            <small style="color: red;">Promo RM 49 DAH TAMAT, tapi takpe saya buka promo baru!</small>
             <br> 
-            <span class="promo-price">RM 49</span></h3>
-        <small>Atas permintaan ramai, kami extend promo RM 49!</small>
-        <h3 style="color: red;">Promosi kali ini terhad kepada 10 slot sahaja!</h2>
+            <span class="promo-price">RM 59</span></h3>
+        <small>Atas permintaan ramai, kami extend promo RM 59!</small>
+        <h3 style="color: red;">Promosi kali ini terhad kepada 30 slot sahaja!</h2>
        <!-- <h3 style="color: red;">Promosi kali ini akan tamat pada 31 Ogos 2025, 11:59pm</h2>-->
-            <a href="https://toyyibpay.com/Ai-Hustler" class="btn">Dapatkan Sekarang</a>
+            <a href="https://toyyibpay.com/ai-hustler-chatgpt" class="btn">Dapatkan Sekarang</a>
     </section>
 
     <footer>
@@ -431,6 +431,7 @@
 </body>
 
 </html>
+
 
 
 
