--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
     </section>
 -->
-    <section id="learn-more">
+    <!--<section id="learn-more">
         <h2>Follower Thread tak ramai, boleh jadi ke boss?</h2>
         <iframe s width="100%" height="500"
             src="https://www.loom.com/embed/162384d093ff4f6bbaaed9edbbc41739?sid=7eb295a8-60c4-4917-bf3f-5294df96186f"
@@ -306,7 +306,7 @@
         <br>
         <a href="https://buy.stripe.com/dRm8wP6jH9zTb3vb4G3ZK0j" class="cta">Dapatkan Sekarang</a>
     </section>
-
+-->
     <section id="features">
         <h2>Apa Yang Anda Akan Belajar?</h2>
         <ul>
@@ -456,3 +456,4 @@
 </body>
 
 </html>
+
