--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <span class="promo-price">RM 59</span>
         </h3>
 
-        <h3 style="color: red;">Promosi Tahun Baru! Kali ini terhad kepada 100 slot sahaja!</h2>
+        <h3 style="color: red;">Promosi Tahun Baru! Kali ini terhad kepada 5 slot sahaja lagi!</h2>
             <!-- <h3 style="color: red;">Promosi kali ini akan tamat pada 31 Ogos 2025, 11:59pm</h2>-->
             <a href="https://buy.stripe.com/dRm8wP6jH9zTb3vb4G3ZK0j" class="btn">Dapatkan Sekarang</a>
     </section>
@@ -456,4 +456,5 @@
 </body>
 
 </html>
+
 
